--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,5 +4,59 @@
     width: 150px;
     border-radius: 50%;
     display: inline-block;
+    width: fit-content;
+  }
+  html {
+    height:100%;
   }
   
+  body {
+    margin:0;
+  }
+  
+  .bg {
+    animation:slide 2s ease-in-out infinite alternate;
+    background-image: linear-gradient(-60deg, rgb(228, 11, 11) 50%, rgb(216, 216, 216) 50%);
+    bottom:0;
+    left:-50%;
+    opacity:.5;
+    position:fixed;
+    right:-50%;
+    top:0;
+    z-index:-1;
+  }
+  
+  .bg2 {
+    animation-direction:alternate-reverse;
+    animation-duration:4s;
+  }
+  
+  .bg3 {
+    animation-duration:6s;
+  }
+  
+  .content {
+    background-color:rgba(253, 247, 247, 0.8);
+    border-radius:.25em;
+    box-shadow:0 0 .25em rgba(0,0,0,.25);
+    box-sizing:border-box;
+    left:50%;
+    padding:10vmin;
+    position:fixed;
+    text-align:center;
+    top:50%;
+    transform:translate(-50%, -50%);
+  }
+  
+  h1 {
+    font-family:sans-serif;
+  }
+  
+  @keyframes slide {
+    0% {
+      transform:translateX(-25%);
+    }
+    100% {
+      transform:translateX(25%);
+    }
+  }
